--- a/Liens.html
+++ b/Liens.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body bgcolor="grey">
+<body background="Space.jpg">
     <h1>Sommaire:</h1>
     <a href="Page 2.html" target="f2"> Localisation d'ingetis </a>
     <br>
