--- a/Liens.html
+++ b/Liens.html
@@ -14,9 +14,9 @@
     <br>
     <a href="Tutos.html" target="f2"> Tuto html et css </a>
     <br>
-    <a href="tp1.html" target="f2"> Article sur les résumés </a>
+    <a href="index2.html" target="f2"> Notre formulaire </a>
     <br>
-    <a href=""> Notre formulaire </a>
+    <a href="tp1.html"> Les résumés </a>
 
 </body>
 </html>
