--- a/Liens.html
+++ b/Liens.html
@@ -16,7 +16,7 @@
     <br>
     <a href="index2.html" target="f2"> Notre formulaire </a>
     <br>
-    <a href="tp1.html"> Les résumés </a>
+    <a href="tp1.html" target="f2"> Les résumés </a>
 
 </body>
 </html>
