--- a/Liens.html
+++ b/Liens.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body background="Space.jpg">
+<body background="fond.png">
     <h1>Sommaire:</h1>
     <a href="Page 2.html" target="f2"> Localisation d'ingetis </a>
     <br>
@@ -17,6 +17,11 @@
     <a href="index2.html" target="f2"> Notre formulaire </a>
     <br>
     <a href="tp1.html" target="f2"> Les résumés </a>
+    <br>
+    <a href="Test boutons\organisme.html" target="f2"> TD2 les organismes </a>
+    <br>
+    <a href="Test boutons\formulaire_org.html" target="f2"> TD3 le formulaire </a>
 
+    
 </body>
 </html>
