--- a/Tutos.html
+++ b/Tutos.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body background="Space.jpg">
+<body background="fond.png">
 
     <marquee scrollamount="70"> Weber Waldo 1 BTS SIO</marquee>
     <marquee scrollamount="60"> Weber Waldo 1 BTS SIO</marquee>
