--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body background="Space.jpg">
-    <iframe src="Liens.html" width="30%" height="600" name="f1"> </iframe>
-    <iframe src="Page 2.html" width="65%" height="600px" name="f2"> </iframe>
+<body background="fond.png">
+    <iframe src="Liens.html" width="15%" height="1000" name="f1"> </iframe>
+    <iframe src="Page 2.html" width="83%" height="1000" name="f2"> </iframe>
 </body>
 </html>
