--- a/2/Liens.html
+++ b/2/Liens.html
@@ -16,6 +16,8 @@
     <br>
     <a href="index2.html" target="f2"> Notre formulaire </a>
     <br>
+    <a href="tableau.html" target="f2" > Tableau HTML</a> 
+    <br>
     <a href="csspro.html" target="f2"> Css project 3</a>
 
     
