--- a/2/Tutos.html
+++ b/2/Tutos.html
@@ -13,7 +13,7 @@
     <marquee scrollamount="30"> Weber Waldo 1 BTS SIO</marquee>
     <marquee scrollamount="30"> <img src="html.png" width="50" height="50"> </marquee> 
 
-    <h1> Tuto html </h1>
+    <h1> Tuto html et CSS</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Tnym_6qCcNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img src="" width="" height="">
     
