--- a/Liens.html
+++ b/Liens.html
@@ -16,11 +16,9 @@
     <br>
     <a href="index2.html" target="f2"> Notre formulaire </a>
     <br>
-    <a href="tp1.html" target="f2"> Les résumés </a>
+    <a href="tableau.html" target="f2" > Tableau HTML</a> 
     <br>
-    <a href="Test boutons\organisme.html" target="f2"> TD2 les organismes </a>
-    <br>
-    <a href="Test boutons\formulaire_org.html" target="f2"> TD3 le formulaire </a>
+    <a href="csspro.html" target="f2"> Css project 3</a>
 
     
 </body>
