--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src='main.js'></script>
 </head>
 <body background="fond.png">
+    <marquee scrollamount="30"> Weber Waldo 1 BTS SIO <img src="html.png" width="50" height="50"> </marquee>
+     
+    <hr>
     <iframe src="Liens.html" width="15%" height="1000" name="f1"> </iframe>
     <iframe src="Page 2.html" width="83%" height="1000" name="f2"> </iframe>
 </body>
