--- a/Liens.html
+++ b/Liens.html
@@ -10,6 +10,8 @@
 </head>
 <body background="fond.png">
     <h1>Sommaire:</h1>
+    <a href="main.html" target="f2"></a>
+    <br>
     <a href="Page 2.html" target="f2"> Localisation d'ingetis </a>
     <br>
     <a href="Tutos.html" target="f2"> Tuto html et css </a>
