--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      
     <hr>
     <iframe src="Liens.html" width="15%" height="1000" name="f1"> </iframe>
-    <iframe src="Page 2.html" width="83%" height="1000" name="f2"> </iframe>
+    <iframe src="main.html" width="83%" height="1000" name="f2"> </iframe>
+    
 </body>
 </html>
