--- a/csspro.html
+++ b/csspro.html
@@ -21,10 +21,10 @@
     </div>
     <div class="c3">
         
-        <a href="float.html" target="_blank"><img src="numéro3.png" width="400" height="400"> </a>
+        <a href="tp4_css.html" target="_blank"><img src="numéro3.png" width="400" height="400"> </a>tp4_css.html
     </div>
 
-    <a href="tp4_css.html" target="_blank"><img src="numéro4.png" width="400" height="400"> </a>
+    <a href="float.html" target="_blank"><img src="numéro4.png" width="400" height="400"> </a>
 </div>
 
 <a href="tp6_css.html" target="_blank"><img src="numéro5.png" width="400" height="400"> </a>
