--- a/Liens.html
+++ b/Liens.html
@@ -20,7 +20,7 @@
     <br>
     <a href="tableau.html" target="f2" > Tableau HTML</a> 
     <br>
-    <a href="csspro.html" target="f2"> Css project 3</a>
+    <a href="csspro.html" target="f2"> Css project</a>
 
     
 </body>
