--- a/csspro.html
+++ b/csspro.html
@@ -21,7 +21,7 @@
     </div>
     <div class="c3">
         
-        <a href="tp4_css.html" target="_blank"><img src="numéro3.png" width="400" height="400"> </a>tp4_css.html
+        <a href="tp4_css.html" target="_blank"><img src="numéro3.png" width="400" height="400"> </a>
     </div>
 
     <a href="float.html" target="_blank"><img src="numéro4.png" width="400" height="400"> </a>
