--- a/tableau.html
+++ b/tableau.html
@@ -9,6 +9,23 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <h2>Exercice tableau 1</h2>
+    <table border="3" width="60%" bgcolor="#B0E0E6">
+        <tbody><tr>
+            <td colspan="3" align="center"><strong>Tableau 1</strong></td>
+        </tr>
+        <tr>
+            <td>Année 2020</td>
+            <td>Année 2021</td>
+            <td>Année 2022</td>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td>150</td>
+            <td>180</td>
+        </tr>
+    </tbody></table>
+
     <h1 align="center"> Exemple basique d'un tableau</h1>
 
     <table border="5" width="60%" bgcolor="#7046db">
