--- a/tableau.html
+++ b/tableau.html
@@ -33,7 +33,7 @@
             <td colspan="2" align="center" bgcolor="#7046db" height="50">Carte Graphique</td>
         </tr>
         <tr>
-            <td rowspan="2" width="20%" align="center" bgcolor="#7046db"><img src="nvidia.png" alt="nvidia logo" width="100" height="100" /></td>
+            <td rowspan="2" width="20%" align="center" bgcolor="#7046db"><img src="nvidia.PNG" alt="nvidia logo" width="100" height="100" /></td>
             <td align="center" bgcolor="#7046db">Geforce RTX 4090</td>
         </tr>
              <td align="center" bgcolor="#7046db">Geforce RTX 4080</td>
