--- a/Liens.html
+++ b/Liens.html
@@ -20,7 +20,18 @@
     <br>
     <a href="tableau.html" target="f2" > Tableau HTML</a> 
     <br>
-    <a href="csspro.html" target="f2"> Css project</a>
+    <a href="csspro.html" target="f2"> Css project 3</a>
+    <br>
+    <a href="Module1.pdf" target="_blank" > Module1</a>
+    <br>
+    <a href="Module2.pdf" target="_blank"> Module2</a>
+    <br>
+    <a href="Module3.pdf" target="_blank"> Module3</a>
+    <br>
+    <a href="Module4.pdf" target="_blank"> Module4</a>
+    <br>
+    <a href="Module5.pdf" target="_blank"> Module5</a>
+
 
     
 </body>
