--- a/tableau.html
+++ b/tableau.html
@@ -9,23 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h2>Exercice tableau 1</h2>
-    <table border="3" width="60%" bgcolor="#B0E0E6">
-        <tbody><tr>
-            <td colspan="3" align="center"><strong>Tableau 1</strong></td>
-        </tr>
-        <tr>
-            <td>Année 2020</td>
-            <td>Année 2021</td>
-            <td>Année 2022</td>
-        </tr>
-        <tr>
-            <td>100</td>
-            <td>150</td>
-            <td>180</td>
-        </tr>
-    </tbody></table>
-
     <h1 align="center"> Exemple basique d'un tableau</h1>
 
     <table border="5" width="60%" bgcolor="#7046db">
@@ -33,7 +16,7 @@
             <td colspan="2" align="center" bgcolor="#7046db" height="50">Carte Graphique</td>
         </tr>
         <tr>
-            <td rowspan="2" width="20%" align="center" bgcolor="#7046db"><img src="nvidia.PNG" alt="nvidia logo" width="100" height="100" /></td>
+            <td rowspan="2" width="20%" align="center" bgcolor="#7046db"><img src="nvidia.png" alt="nvidia logo" width="100" height="100" /></td>
             <td align="center" bgcolor="#7046db">Geforce RTX 4090</td>
         </tr>
              <td align="center" bgcolor="#7046db">Geforce RTX 4080</td>
